template with basic changes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,7 +68,7 @@ a.navbar-item.is-active {
     letter-spacing: 0.25rem;
 }
 
-#about {
+#introduction {
     .image {
         max-width: 20vmax;
         margin: auto;
