--- a/_includes/dropdown.html
+++ b/_includes/dropdown.html
@@ -1,5 +1,4 @@
-<div class="navbar-item has-dropdown is-hoverable">
-    <a class="navbar-link">
+<!--    <a class="navbar-link">
         MORE
     </a>
     <div class="navbar-dropdown has-background-black is-left">
@@ -14,6 +13,6 @@
         <!-- <hr class="navbar-divider">
     <a class="navbar-item">
       Report an issue
-    </a> -->
+    </a>
     </div>
-</div>
+</div>-->
