--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
 <body>
   {% include navbar.html %}
   {% include showcase.html %}
-  {% include about.html %}
+  {% include introduction.html %}
   {% include contact.html %}
   <!--Footer begins here-->
   {% include footer.html %}
