--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,18 +1,23 @@
 <section class="hero is-fullheight has-text-centered has-background-white-ter" id="introduction">
-    <div class="hero-body">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
-                    <!--<figure class="image">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
+          <!--<figure class="image">
                         <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
                     </figure>-->
-                </div>
-                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
-                    <p>intro blabla civil war bla </p>
-                    <br>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
+        <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+          <p>In a publication ..., Hegre and XXX tried to predict the onset of civil wars using two different techniques : logarithmic regressions and Random Forests. While the logistic regression are widely used to developed model with binary
+            outcomes, the use of Random Forests was original and allowed the researchers to identify features/values/metrics with a strong predictive power.
+
+            These metrics were for the most already widely discussed/covered in the literature (GDP Growth, ...) a few of them were unexpected such as the roughness of the landscape or the XXX.
+
+            Since variations in these domains allowed the algorithm to perform accurate predictions, we wanted to study these trends</p>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 </section>
