--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,15 +10,16 @@
             <div class="column has-text-left-desktop has-text-centered-mobile">
                 <a href="{{site.url}}{{site.baseurl}}/#about">
                     <div class="columns">
-                        <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-quarter-tablet">
-                            <figure class="image is-64x64">
+                        <!-- <div class="column is-one-fifth-desktop is-one-fifth-fullhd is-one-quarter-tablet">
+                           <figure class="image is-64x64">
                                 <img class="is-rounded" src="{{site.author-image}}">
                             </figure>
-                        </div>
+                        </div>-->
                         <div class="column is-marginless">
-                            <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
+                            <h5 class="has-text-grey-lighter"><p>cADAstophe</p></h5>
                             <div class="content has-text-grey">
-                                <p>{{site.author-about | truncate: 75 }}</p>
+                              <a href="https://github.com/epfl-ada/ada-2020-project-milestone-p3-p3_cadastrophe" target="_blank" class="has-text-white"><i class="fab fa-github"></i></a>
+                              <a href="https://github.com/epfl-ada/ada-2020-project-milestone-p3-p3_cadastrophe">Find us on Github!</a>
                             </div>
                         </div>
                     </div>
