--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,8 +84,8 @@ a.navbar-item.is-active {
     }
 }
 
-#contact {
-    #contact-button {
+#conclusion {
+    #conclusion-button {
         margin: 0.5rem auto;
         display: flex;
         justify-content: center;
