--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,10 +24,11 @@
                 <a class="navbar-item {% if page.layout == 'default' %}is-active{% endif %}"
                     href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">HOME</a>
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#introduction">INTRODUCTION</a>
-                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#findings">FINDINGS</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#Conclusion">CONCLUSION</a>
               <!--  <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                     href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>-->
-                
+
             </div>
 
         </div>
