--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -9,7 +9,7 @@
       </h3>
       <hr>
       <a href="{{site.url}}{{site.baseurl}}/#introduction"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
+        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Let us begin!</a>
       </a>
     </div>
   </div>
