--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@ layout: compress
   {% include navbar.html %}
   {% include showcase.html %}
   {% include introduction.html %}
-  {% include contact.html %}
+  {% include findings.html %}
+  {% include conclusion.html %}
   <!--Footer begins here-->
   {% include footer.html %}
 </body>
