--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -8,7 +8,7 @@
 <title>{War stories}{% if page.title %} | {War stories}{% endif %}</title>
 
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="{War stories}{% if page.title %} | {War stories}{% endif %}">
+<meta name="og:title" content="War stories{% if page.title %} |War stories{% endif %}">
 <meta name="og:description" content="{% unless page.layout == 'post' %}{{site.description}}{% else %}{{page.description}}{% endunless %}">
 <meta name="og:image" content="{% unless page.layout == 'post' %}{{site.site-image}}{% else %}{{page.post-image}}{% endunless %}">
 <meta name="og:image:alt" content="{{site.title}}{% if page.title %} | {{page.title}}{% endif %}">
