basic layout + first plotly

--- a/_includes/findings.html
+++ b/_includes/findings.html
@@ -1,11 +1,9 @@
-<section class="hero is-fullheight has-text-centered has-background-white-ter" id="findings">
+<section class="hero is-fullheight has-text-centered" id="findings">
     <div class="hero-body">
         <div class="container">
             <div class="columns">
+              {% include country_by_features.html %}
                 <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
-                    <!--<figure class="image">
-                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
-                    </figure>-->
                 </div>
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
                     <p>findings blabla civil war bla </p>
