--- a/_includes/conclusion.html
+++ b/_includes/conclusion.html
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight has-text-centered" id="Conclusion">
+<section class="hero is-fullheight has-text-centered has-background-white-ter" id="Conclusion">
     <div class="hero-body">
         <div class="container">
 
