--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,11 +1,18 @@
-<section class="hero is-fullheight has-text-left has-background-white-ter" id="introduction">
+<section class="hero is-fullheight has-text-centered has-background-white-ter" id="introduction">
     <div class="hero-body">
         <div class="container">
-          <h1 class="title">
-          Introduction
-          </h1>
-            <p class="text-black-50 mb-0">
-              {introduction.md}
+            <div class="columns">
+                <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
+                    <!--<figure class="image">
+                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
+                    </figure>-->
+                </div>
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+                    <p>intro blabla civil war bla </p>
+                    <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 </section>
