--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@ layout: compress
 
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width">
 {% include head.html %}
-
 <body>
   {% include navbar.html %}
   {% include showcase.html %}
  <section class="hero ">
-      <div class="hero-body">
+      <div class="hero--content">
         <div class="columns is-centered">
          <div class="column is-three-quarters">
           <div class=" content has-background-white has-text-justified-desktop has-text-justified-fullhd has-text-justified has-text-justified-tablet has-text-left-mobile">              <div class="section">
